alteracao de textos para port, foto pessoal, entre outros.

--- a/index.html
+++ b/index.html
@@ -12,59 +12,58 @@
 <body>
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud image">
-    <h1>I'm Marcele.</h1>
+    <h1>Aqui é Marcele</h1>
     <p>
-      <h2>a <span class="pro">pro</span>grammer.</h2>
+      <h2>Precisa de <span class="pro">web</span>designer?</h2>
     </p>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud image">
-    <img src="images/mountain.png" alt="mountain image">
+    <img src="images/web design.png" alt="mountain image">
 
   </div>
 
   <div class="middle-container">
     <div class="profile">
       <img class="profile-img" src="images/marcele.png" alt="marcele picture">
-      <h2>Hello.</h2>
-      <p class="intro">I am a Web Developer and Designer from Brazil.
-        I have worked in the public sector until in 2019,
-        when I decided to leave and explore my full potential.
-        I ❤️Tech, Coffee and Travelling. </p>
+      <h2>Olá!</h2>
+      <p class="intro">Sou mulher web designer e minha missão é ajudar outras mulheres
+        a terem um cantinho na internet!
+     </p>
     </div>
-    <hr>
+    <hr />
     <div class="skills">
-      <h2>My Skills.</h2>
+      <h2>Minhas habilidades</h2>
       <div class="skill-row">
         <img class="code-img" src="images/code.png" alt="code icon">
-        <h3>Dev & Design</h3>
-        <p>I've got my first computer when I was 8.
-          Had to learn to code early so I could play games in the old days.
-          My first complete code in the 90's was a chatbot in Pascal.
+        <h3>Dev & Design ‍</h3>
+        <p>Tenho experiência de mais de 10 anos
+          na área de tecnologia, trabalhando
+          desde o desenvolvimento de softwares
+          até criação de arte para diferentes
+          meios, especialmente o digital.
       </div>
       <div class="skill-row">
         <img class="dating-img" src="images/dating.png" alt="dating image">
-        <h3>Luv Coach</h3>
-        <p>I'm not a Coach. Cmon! That's a joke! Being honest, I really enjoy talking about dating,
-          relationships and feminism. Do you need an advice? Contact me! #wink
+        <h3>Qualidade e Confiança</h3>
+        <p>Sei como o mercado de TI é complexo. E é por isso que meu foco
+          é descomplicar o desenvolvimento de sites para que você
+          se sinta confortável e pare de ter dores de cabeça
+          com profissionais que não respondem 👻, te deixam na mão,
+          não solucionam problemas e ainda cobram valores injustificáveis.
       </div>
     </div>
-    <hr>
     <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <h3>I'll bring back your ex in 9000 days.</h3>
-      <p class="contact-msg">No! I won't. But if you wanna talk about your ex and
-        the shitty things you went though, I'm your woman!
-        Let's chat and compare who have the worst EX! 🔥
-        <br>
-        <p></p>
-        <a class="contact-button" href="mailto:xmarcelex@gmail.com">CONTACT ME</a>
+      <h2>Bóra conversar?</h2>
+      <h3>Não perca o sono por quem não perde o sono por você também.</h3>
+      <p class="contact-msg">
+        <a class="contact-button" href="mailto:xmarcelex@gmail.com">Aperte aqui!</a>
 
     </div>
   </div>
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/marcelealvim/">LinkedIn</a>
-    <a class="footer-link" href="https://instagram.com/mahbona">Instagram</a>
-    <a class="footer-link" href="https://www.google.com/">Google</a>
-    <p class="footer-copyright">© 2020 🌈 Marcele Bona Alvim.</p>
+    <a class="footer-link" href="https://www.instagram.com/killjoyfem">Instagram</a>
+    <a class="footer-link" href="https://www.facebook.com/mahbona">Facebook</a>
+    <p class="footer-copyright">© 2020 - 2021 🌈 Marcele Bona | Web Designer 🌈 Mulher </p>
   </div>
 </body>
 </html>
