alterações de texto

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud image">
-    <h1>Aqui é Marcele</h1>
+    <h1>Aqui é a Marcele</h1>
     <p>
-      <h2>Precisa de <span class="pro">web</span>designer?</h2>
+      <h2>Precisa de uma <span class="pro">Web</span> Designer?</h2>
     </p>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud image">
     <img src="images/web design.png" alt="mountain image">
@@ -25,8 +25,8 @@
     <div class="profile">
       <img class="profile-img" src="images/marcele.png" alt="marcele picture">
       <h2>Olá!</h2>
-      <p class="intro">Sou mulher web designer e minha missão é ajudar outras mulheres
-        a terem um cantinho na internet!
+      <p class="intro">Sou uma mulher Web Designer e minha missão é ajudar outras mulheres
+        a terem um cantinho na internet também!
      </p>
     </div>
     <hr />
@@ -52,7 +52,7 @@
       </div>
     </div>
     <div class="contact-me">
-      <h2>Bóra conversar?</h2>
+      <h2>Bora conversar?</h2>
       <h3>Não perca o sono por quem não perde o sono por você também.</h3>
       <p class="contact-msg">
         <a class="contact-button" href="mailto:xmarcelex@gmail.com">Aperte aqui!</a>
