--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="profile">
       <img class="profile-img" src="images/marcele.png" alt="marcele picture">
       <h2>Olá!</h2>
-      <p class="intro">Sou uma mulher Web Designer e minha missão é ajudar outras mulheres
+      <p class="intro">Sou Full Stack Web Designer e Developer e minha missão é ajudar outras mulheres
         a terem um cantinho na internet também!
      </p>
     </div>
@@ -67,6 +67,8 @@
   </div>
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/marcelealvim/">LinkedIn</a>
+    <a class="footer-link" href="https://youtu.be/r3Dedf0KUyM">WordCamp 19'Speaker</a>    
+    <a class="footer-link" href="https://www.twitter.com/marcelebona">Twitter</a>
     <a class="footer-link" href="https://www.instagram.com/killjoyfem">Instagram</a>
     <a class="footer-link" href="https://www.facebook.com/mahbona">Facebook</a>
     <p class="footer-copyright">© 2020 - 2021 🌈 Marcele Bona | Web Designer 🌈 Mulher </p>
